package com.example.inasafe

import android.content.Intent
import android.os.Bundle
import android.widget.Button
import android.widget.Toast
import androidx.appcompat.app.AppCompatActivity
import com.google.android.material.textfield.TextInputEditText
import com.google.firebase.auth.FirebaseAuth
import com.google.firebase.database.FirebaseDatabase

class LoginActivity : AppCompatActivity() {

    private lateinit var auth: FirebaseAuth

    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)
        setContentView(R.layout.activity_login)

        auth = FirebaseAuth.getInstance()

        // Comprobar si el usuario ya ha iniciado sesión
        if (auth.currentUser != null) {
            val user = auth.currentUser
            val db = FirebaseDatabase.getInstance().getReference("Users").child(user!!.uid)
            db.get().addOnSuccessListener { dataSnapshot ->
                val userRole = dataSnapshot.child("role").getValue(String::class.java)
                if (userRole == "ADMIN") {
                    startActivity(Intent(this, AdminActivity::class.java))
                } else {
                    startActivity(Intent(this, MainActivity::class.java))
                }
                finish()
            }.addOnFailureListener{
                Toast.makeText(baseContext, "Error al obtener datos de usuario.", Toast.LENGTH_SHORT).show()
            }
            return // Evita que se ejecute el resto del código de onCreate
        }

        val etEmail = findViewById<TextInputEditText>(R.id.etEmail)
        val etPassword = findViewById<TextInputEditText>(R.id.etPassword)
        val btnLogin = findViewById<Button>(R.id.btnLogin)
        val btnGoToRegister = findViewById<Button>(R.id.btnGoToRegister)

        btnLogin.setOnClickListener {
            val email = etEmail.text.toString()
            val password = etPassword.text.toString()

            if (email.isEmpty() || password.isEmpty()) {
                Toast.makeText(this, "Por favor, complete todos los campos", Toast.LENGTH_SHORT).show()
                return@setOnClickListener
            }

            auth.signInWithEmailAndPassword(email, password)
                .addOnCompleteListener(this) { task ->
                    if (task.isSuccessful) {
                        val user = auth.currentUser
                        // Leer el rol del usuario desde la base de datos
                        val db = FirebaseDatabase.getInstance().getReference("Users").child(user!!.uid)
                        db.get().addOnSuccessListener { dataSnapshot ->
                            val userRole = dataSnapshot.child("role").getValue(String::class.java)
                            if (userRole == "ADMIN") {
                                startActivity(Intent(this, AdminActivity::class.java))
                            } else {
                                startActivity(Intent(this, MainActivity::class.java))
                            }
                            finish()
                        }.addOnFailureListener{
                            Toast.makeText(baseContext, "Error al obtener datos de usuario.", Toast.LENGTH_SHORT).show()
                        }
                    } else {
                        Toast.makeText(baseContext, "Fallo en la autenticación: ${task.exception?.message}", Toast.LENGTH_SHORT).show()
                    }
                }
        }

        btnGoToRegister.setOnClickListener {
            startActivity(Intent(this, RegisterActivity::class.java))
        }
    }
}